force-app/main/default/objects/LAD_Financial_Document_Payment__c/LAD_Financial_Document_Payment__c.object-meta.xml
<CustomObject>
    <description>Junction Object for LAD_Financial_Document__c And BLN_Payment__c. FOUK-10357</description>
    <label>Financial Document Payment</label>
    <nameField>
        <label>Financial Document Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Document Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>