force-app/main/default/objects/LAD_Financial_Document_Payment__c/fields/LAD_Financial_Document__c.field-meta.xml
<CustomField>
    <fullName>LAD_Financial_Document__c</fullName>
    <description>Master-Detail relationship with LAD_Financial_Document__c obj. FOUK-10357</description>
    <label>Financial Document</label>
    <referenceTo>LAD_Financial_Document__c</referenceTo>
    <relationshipLabel>Financial Document Payments</relationshipLabel>
    <relationshipName>Financial_Document_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>