force-app/main/default/objects/LAD_Financial_Document_Payment__c/fields/LAD_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>LAD_Paid_Amount__c</fullName>
    <description>Currency field to store the value of Amount, Paid.  FOUK-10357</description>
    <label>Paid Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>