force-app/main/default/objects/LAD_Financial_Document_Payment__c/fields/LAD_Payment__c.field-meta.xml
<CustomField>
    <fullName>LAD_Payment__c</fullName>
    <description>Master-Detail relationship with BLN_Payment__c object.  FOUK-10357</description>
    <label>Payment</label>
    <referenceTo>BLN_Payment__c</referenceTo>
    <relationshipLabel>Financial Document Payments</relationshipLabel>
    <relationshipName>Financial_Document_Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>